; ModuleID = '/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_juliandayFunc.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/api_server/extr_sqlite3.c_juliandayFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { double }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @juliandayFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @juliandayFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32**, i32*** %6, align 8
  %11 = call i64 @isDate(i32* %8, i32 %9, i32** %10, %struct.TYPE_4__* %7)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = call i32 @computeJD(%struct.TYPE_4__* %7)
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %17 = load double, double* %16, align 8
  %18 = fdiv double %17, 8.640000e+07
  %19 = call i32 @sqlite3_result_double(i32* %15, double %18)
  br label %20

20:                                               ; preds = %13, %3
  ret void
}

declare dso_local i64 @isDate(i32*, i32, i32**, %struct.TYPE_4__*) #1

declare dso_local i32 @computeJD(%struct.TYPE_4__*) #1

declare dso_local i32 @sqlite3_result_double(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
